syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message blank{}

message FindOrderRequest {
  string id = 1;
}

message FindOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message FindAllOrdersResponse {
  repeated FindOrderResponse orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc FindOrder(FindOrderRequest) returns (FindOrderResponse);
  rpc FindAllOrders(blank) returns (FindAllOrdersResponse);
}
